deploy/bestcloud-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bestcloudapp-v2
  labels:
    app: caseapp
    version: v2
  namespace: bestcloudapp
spec:
  replicas: 3
  selector:
    matchLabels:
      version: v2
  template:
    metadata:
      labels:
        app: caseapp
        version: v2
    spec:
      containers:
      - name: bestcloudapp-v2
        image: aozcalisan/bestcloudapp:9
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bestcloudapp-v2-svc
  labels:
    app: caseapp
    version: v2      
  namespace: bestcloudapp  
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: bestcloudapp-v2
